Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,60 @@
     */
     const newsData = [
   {
+    "title": "Federer thắng nhiều nhất 'Big 3' sau tuổi 35",
+    "content": "Roger Federer đã giành chiến thắng nhiều nhất trong số 'Big 3' sau khi bước sang tuổi 35, với tỷ lệ thắng 84% trong 229 trận và giành được 15 danh hiệu, bao gồm ba Grand Slam. Trong khi đó, Rafael Nadal chỉ tham gia 100 trận với 76 chiến thắng và sáu danh hiệu, và Novak Djokovic, dù vẫn thi đấu, nhưng phong độ của anh đang đi xuống với nhiều thất bại gần đây. Federer là tay vợt duy nhất trong nhóm có thành tích ấn tượng sau tuổi 35, khẳng định sức mạnh của mình cho đến khi giải nghệ vào năm 2022.",
+    "link": "https://vnexpress.net/federer-thang-nhieu-nhat-big-3-sau-tuoi-35-4860211.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Federer đã giành bao nhiêu danh hiệu sau tuổi 35?",
+    "answers": [
+      {
+        "text": "15 danh hiệu",
+        "correct": true
+      },
+      {
+        "text": "10 danh hiệu",
+        "correct": false
+      },
+      {
+        "text": "20 danh hiệu",
+        "correct": false
+      },
+      {
+        "text": "12 danh hiệu",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Hái ra tiền' bằng nghề bế phụ nữ lên núi",
+    "content": "Tiểu Trương, một chàng trai 26 tuổi tại Trung Quốc, đã phát triển dịch vụ hỗ trợ leo núi, giúp bế hoặc cõng khách nữ lên đỉnh núi, từ đó kiếm được 50.000 tệ mỗi tháng. Dịch vụ này thu hút nhiều khách hàng nữ, đặc biệt là những người từ 25-40 tuổi, nhờ vào sự hỗ trợ cả về thể lực và tâm lý. Tiểu Trương đã mở rộng đội ngũ của mình lên đến 50 người và có kế hoạch phát triển dịch vụ sang các ngọn núi nổi tiếng khác. Mặc dù công việc này mang lại thu nhập cao, cũng có lo ngại về sức khỏe lâu dài của anh.",
+    "link": "https://vnexpress.net/hai-ra-tien-bang-nghe-be-phu-nu-len-nui-4860124.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tiểu Trương kiếm tiền bằng cách nào?",
+    "answers": [
+      {
+        "text": "Hỗ trợ leo núi bằng cách bế phụ nữ lên đỉnh núi",
+        "correct": true
+      },
+      {
+        "text": "Bán gậy leo núi",
+        "correct": false
+      },
+      {
+        "text": "Làm hướng dẫn viên du lịch",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức tour leo núi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chủ tịch Hà Nội: Triển khai theo chỉ đạo của Chính phủ, loại bỏ cán bộ không đủ năng lực",
     "content": "Chủ tịch UBND TP Hà Nội Trần Sỹ Thanh đã chỉ đạo các đơn vị thực hiện theo chỉ đạo của Chính phủ về việc loại bỏ cán bộ không đủ năng lực. Ông yêu cầu cần cải cách thể chế, cải thiện môi trường đầu tư và thu hút nhân tài, đồng thời nhấn mạnh đến việc xây dựng khung pháp lý riêng cho đặc khu kinh tế. Hà Nội cũng đặt mục tiêu giảm thời gian xử lý thủ tục hành chính và chi phí kinh doanh để thúc đẩy phát triển kinh tế xã hội.",
     "link": "https://tuoitre.vn/chu-tich-ha-noi-trien-khai-theo-chi-dao-cua-chinh-phu-loai-bo-can-bo-khong-du-nang-luc-20250312134839697.htm",
@@ -493,6 +547,33 @@
       },
       {
         "text": "Không có biện pháp cụ thể nào.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cuộc sống bế tắc của bạn gái tin đồn Kim Soo Hyun trước khi mất ở tuổi 25",
+    "content": "Kim Sae Ron, nữ diễn viên tài năng Hàn Quốc, đã gặp nhiều khó khăn trong cuộc sống trước khi qua đời ở tuổi 25. Cô phải đối mặt với áp lực nợ nần và các vấn đề về sức khỏe tâm thần, bao gồm cả trầm cảm. Sau bê bối lái xe khi say rượu, sự nghiệp của cô bị ảnh hưởng nặng nề, dẫn đến việc cô bị tẩy chay và không có cơ hội trở lại với diễn xuất. Kim Sae Ron đã từng cầu cứu Kim Soo Hyun để giúp giải quyết khoản nợ lớn trước khi mất.",
+    "link": "https://dantri.com.vn/giai-tri/cuoc-song-be-tac-cua-ban-gai-tin-don-kim-soo-hyun-truoc-khi-mat-o-tuoi-25-20250312123614202.htm",
+    "cat": "giai-tri",
+    "positivity": 1,
+    "importance": 10,
+    "question": "Cuộc sống của Kim Sae Ron gặp khó khăn gì trước khi cô qua đời?",
+    "answers": [
+      {
+        "text": "Cô gặp vấn đề về sức khỏe tâm thần và áp lực nợ nần.",
+        "correct": true
+      },
+      {
+        "text": "Cô có sự nghiệp diễn xuất thành công và được yêu thích.",
+        "correct": false
+      },
+      {
+        "text": "Cô sống hạnh phúc bên gia đình và bạn bè.",
+        "correct": false
+      },
+      {
+        "text": "Cô không gặp bất kỳ khó khăn nào trong cuộc sống.",
         "correct": false
       }
     ]
@@ -2414,37 +2495,6 @@
     ]
   },
   {
-    "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
-    "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
-    "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "WinCommerce dự định mở bao nhiêu cửa hàng trong năm 2025?",
-    "answers": [
-      {
-        "text": "1.000 cửa hàng",
-        "correct": true
-      },
-      {
-        "text": "500 cửa hàng",
-        "correct": false
-      },
-      {
-        "text": "2.000 cửa hàng",
-        "correct": false
-      },
-      {
-        "text": "800 cửa hàng",
-        "correct": false
-      },
-      {
-        "text": "1.500 cửa hàng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
     "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
@@ -2498,6 +2548,37 @@
       },
       {
         "text": "Chỉ tổ chức tour du lịch trong nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
+    "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
+    "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "WinCommerce dự định mở bao nhiêu cửa hàng trong năm 2025?",
+    "answers": [
+      {
+        "text": "1.000 cửa hàng",
+        "correct": true
+      },
+      {
+        "text": "500 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "2.000 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "800 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "1.500 cửa hàng",
         "correct": false
       }
     ]
@@ -2793,6 +2874,33 @@
     ]
   },
   {
+    "title": "Cuộc chiến giữa bác sĩ thật với 'lang băm TikTok'",
+    "content": "Bài viết phản ánh tình trạng bệnh nhân từ chối điều trị y tế do tin tưởng vào thông tin sai lệch trên TikTok, dẫn đến những hậu quả nghiêm trọng. Hai trường hợp điển hình là một phụ nữ mắc ung thư vú và một đàn ông mắc ung thư trực tràng đã từ chối can thiệp y tế, dẫn đến tình trạng sức khỏe nghiêm trọng và cuối cùng là sự ra đi của họ. Các bác sĩ bày tỏ lo ngại về sự lan rộng của các phương pháp chữa bệnh không chính thống và kêu gọi người dân cần thận trọng trong việc tìm kiếm thông tin sức khỏe trên mạng xã hội.",
+    "link": "https://vnexpress.net/cuoc-chien-giua-bac-si-that-voi-lang-bam-tiktok-4855158.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều bệnh nhân từ chối điều trị y tế?",
+    "answers": [
+      {
+        "text": "Do tin tưởng vào thông tin sai lệch trên TikTok",
+        "correct": true
+      },
+      {
+        "text": "Vì họ không có tiền điều trị",
+        "correct": false
+      },
+      {
+        "text": "Bệnh viện quá đông người",
+        "correct": false
+      },
+      {
+        "text": "Họ không tin vào bác sĩ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
     "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
     "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
@@ -2850,33 +2958,6 @@
       },
       {
         "text": "Tổ chức tiệc lớn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cuộc chiến giữa bác sĩ thật với 'lang băm TikTok'",
-    "content": "Bài viết phản ánh tình trạng bệnh nhân từ chối điều trị y tế do tin tưởng vào thông tin sai lệch trên TikTok, dẫn đến những hậu quả nghiêm trọng. Hai trường hợp điển hình là một phụ nữ mắc ung thư vú và một đàn ông mắc ung thư trực tràng đã từ chối can thiệp y tế, dẫn đến tình trạng sức khỏe nghiêm trọng và cuối cùng là sự ra đi của họ. Các bác sĩ bày tỏ lo ngại về sự lan rộng của các phương pháp chữa bệnh không chính thống và kêu gọi người dân cần thận trọng trong việc tìm kiếm thông tin sức khỏe trên mạng xã hội.",
-    "link": "https://vnexpress.net/cuoc-chien-giua-bac-si-that-voi-lang-bam-tiktok-4855158.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều bệnh nhân từ chối điều trị y tế?",
-    "answers": [
-      {
-        "text": "Do tin tưởng vào thông tin sai lệch trên TikTok",
-        "correct": true
-      },
-      {
-        "text": "Vì họ không có tiền điều trị",
-        "correct": false
-      },
-      {
-        "text": "Bệnh viện quá đông người",
-        "correct": false
-      },
-      {
-        "text": "Họ không tin vào bác sĩ",
         "correct": false
       }
     ]
@@ -3360,37 +3441,6 @@
       },
       {
         "text": "Phát triển khu dân cư mới",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vén màn chuyện tình 6 năm của tài tử Kim Soo Hyun và bạn gái kém 12 tuổi",
-    "content": "Mối quan hệ tình cảm kéo dài 6 năm giữa tài tử Kim Soo Hyun và nữ diễn viên Kim Sae Ron đã được tiết lộ qua một buổi livestream của kênh YouTube Viện Garo Sero. Họ bắt đầu hẹn hò từ năm 2015 khi Kim Sae Ron mới 15 tuổi và Kim Soo Hyun 27 tuổi, nhưng đã chia tay vào năm 2021. Sau khi Kim Sae Ron qua đời vào tháng 2/2025, Kim Soo Hyun bị chỉ trích vì không gửi lời chia buồn và không tham dự tang lễ, dẫn đến sự thất vọng từ phía người hâm mộ.",
-    "link": "https://dantri.com.vn/giai-tri/ven-man-chuyen-tinh-6-nam-cua-tai-tu-kim-soo-hyun-va-ban-gai-kem-12-tuoi-20250311211128345.htm",
-    "cat": "giai-tri",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Mối quan hệ giữa Kim Soo Hyun và Kim Sae Ron diễn ra trong bao lâu?",
-    "answers": [
-      {
-        "text": "6 năm",
-        "correct": true
-      },
-      {
-        "text": "2 năm",
-        "correct": false
-      },
-      {
-        "text": "4 năm",
-        "correct": false
-      },
-      {
-        "text": "1 năm",
-        "correct": false
-      },
-      {
-        "text": "3 năm",
         "correct": false
       }
     ]
