Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Coolmate ra mắt dòng sản phẩm thể thao cho phái nữ",
+    "content": "Coolmate, một hãng đồ thể thao Việt Nam, vừa ra mắt dòng sản phẩm Coolmate Active for Women dành riêng cho phái nữ. Sự kiện ra mắt diễn ra vào ngày 9/3 với sự tham gia của nhiều kỷ lục gia thể thao nổi tiếng như Nguyễn Thị Oanh. Dòng sản phẩm này được thiết kế chú trọng đến tính ứng dụng, phù hợp cho cả tập luyện và sinh hoạt hàng ngày, với giá cả phải chăng. Coolmate cũng lên kế hoạch tổ chức nhiều sự kiện thể thao trong năm 2025 để đồng hành cùng cộng đồng.",
+    "link": "https://vnexpress.net/coolmate-ra-mat-dong-san-pham-the-thao-cho-phai-nu-4859916.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Dòng sản phẩm mới của Coolmate dành cho ai?",
+    "answers": [
+      {
+        "text": "Phái nữ",
+        "correct": true
+      },
+      {
+        "text": "Phái mạnh",
+        "correct": false
+      },
+      {
+        "text": "Trẻ em",
+        "correct": false
+      },
+      {
+        "text": "Người cao tuổi",
+        "correct": false
+      },
+      {
+        "text": "Người khuyết tật",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chuyển giới quay lại nữ vì 'làm đàn ông quá mệt mỏi'",
     "content": "Alia Ismail, 30 tuổi, sau 6 năm sống với tư cách là đàn ông, đã quyết định quay trở lại giới tính nữ vì cảm thấy quá mệt mỏi với cuộc sống nam giới. Cô đã trải qua nhiều phẫu thuật và tiêm hormone trước khi nhận ra rằng việc sống như một người phụ nữ khiến cô hạnh phúc hơn. Alia đã ngưng sử dụng hormone nam và thực hiện các phẫu thuật tái tạo để trở lại hình dáng cũ. Cô chia sẻ trải nghiệm của mình nhằm giúp người khác tránh những quyết định sai lầm trong cuộc sống chuyển giới.",
     "link": "https://vnexpress.net/chuyen-gioi-quay-lai-nu-vi-lam-dan-ong-qua-met-moi-4860336.html",
@@ -1527,32 +1558,28 @@
     ]
   },
   {
-    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
-    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
-    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
+    "title": "Biến chứng nguy hiểm của viêm gan E",
+    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
+    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
     "cat": "suc-khoe",
-    "positivity": 6,
+    "positivity": 5,
     "importance": 8,
-    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
+    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
     "answers": [
       {
-        "text": "Bệnh sởi",
+        "text": "Suy gan cấp và biến chứng thần kinh",
         "correct": true
       },
       {
-        "text": "Ngộ độc thực phẩm",
+        "text": "Chỉ gây triệu chứng nhẹ",
         "correct": false
       },
       {
-        "text": "Nhiễm trùng đường tiêu hóa",
+        "text": "Không có biến chứng gì",
         "correct": false
       },
       {
-        "text": "Viêm phổi",
-        "correct": false
-      },
-      {
-        "text": "Sốt xuất huyết",
+        "text": "Chỉ ảnh hưởng đến gan mà thôi",
         "correct": false
       }
     ]
@@ -1585,28 +1612,32 @@
     ]
   },
   {
-    "title": "Biến chứng nguy hiểm của viêm gan E",
-    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
-    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
+    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
+    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
+    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
     "cat": "suc-khoe",
-    "positivity": 5,
+    "positivity": 6,
     "importance": 8,
-    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
+    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
     "answers": [
       {
-        "text": "Suy gan cấp và biến chứng thần kinh",
+        "text": "Bệnh sởi",
         "correct": true
       },
       {
-        "text": "Chỉ gây triệu chứng nhẹ",
+        "text": "Ngộ độc thực phẩm",
         "correct": false
       },
       {
-        "text": "Không có biến chứng gì",
+        "text": "Nhiễm trùng đường tiêu hóa",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng đến gan mà thôi",
+        "text": "Viêm phổi",
+        "correct": false
+      },
+      {
+        "text": "Sốt xuất huyết",
         "correct": false
       }
     ]
