Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Cà Mau khởi động dự án tín chỉ carbon xanh",
+    "content": "Cà Mau đã khởi động dự án tín chỉ carbon xanh với sự hỗ trợ từ Tổ chức cứu trợ Trẻ em Nhật Bản. Dự án nhằm đánh giá tính khả thi và thiết kế đề xuất cho việc khôi phục và bảo vệ ít nhất 1.500ha rừng ngập mặn tại tỉnh này. Ông Nguyễn Đồng Khởi cho biết, dự án không chỉ giúp bảo vệ môi trường mà còn nâng cao sinh kế cho cộng đồng dân cư ven biển, đồng thời hướng tới mục tiêu Netzero vào năm 2050.",
+    "link": "https://tuoitre.vn/ca-mau-khoi-dong-du-an-tin-chi-carbon-xanh-20250312141025232.htm",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Dự án tín chỉ carbon xanh tại Cà Mau nhằm mục đích gì?",
+    "answers": [
+      {
+        "text": "Khôi phục và bảo vệ rừng ngập mặn",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường sản xuất nông nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Giảm diện tích rừng",
+        "correct": false
+      },
+      {
+        "text": "Phát triển du lịch biển",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Barca kiếm nhiều tiền nhất ở Champions League",
     "content": "Barcelona đã vượt qua Benfica để vào tứ kết Champions League và sẽ nhận hơn 101,5 triệu euro từ giải đấu này, đánh dấu một con số kỷ lục. Số tiền này bao gồm nhiều khoản thưởng từ việc tham gia, kết quả vòng bảng và vượt qua các vòng loại trực tiếp. Đội bóng này đang cải thiện tình hình tài chính và có thể thu về tổng cộng 160 triệu USD nếu giành chiến thắng ở Champions League mùa này.",
     "link": "https://vnexpress.net/barca-kiem-nhieu-tien-nhat-o-champions-league-4860325.html",
@@ -699,33 +726,6 @@
     ]
   },
   {
-    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
-    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
-    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
-    "answers": [
-      {
-        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
-        "correct": true
-      },
-      {
-        "text": "Canxi, vitamin A, vitamin E",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ, omega-3, vitamin K",
-        "correct": false
-      },
-      {
-        "text": "Protein, selen, vitamin B9",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
     "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
     "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
@@ -748,6 +748,33 @@
       },
       {
         "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
+    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
+    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
+    "answers": [
+      {
+        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
+        "correct": true
+      },
+      {
+        "text": "Canxi, vitamin A, vitamin E",
+        "correct": false
+      },
+      {
+        "text": "Chất xơ, omega-3, vitamin K",
+        "correct": false
+      },
+      {
+        "text": "Protein, selen, vitamin B9",
         "correct": false
       }
     ]
@@ -1661,33 +1688,6 @@
     ]
   },
   {
-    "title": "Biến chứng nguy hiểm của viêm gan E",
-    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
-    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
-    "answers": [
-      {
-        "text": "Suy gan cấp và biến chứng thần kinh",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây triệu chứng nhẹ",
-        "correct": false
-      },
-      {
-        "text": "Không có biến chứng gì",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến gan mà thôi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
     "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
     "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
@@ -1741,6 +1741,33 @@
       },
       {
         "text": "Chỉ làm đau lưng mà thôi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Biến chứng nguy hiểm của viêm gan E",
+    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
+    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
+    "answers": [
+      {
+        "text": "Suy gan cấp và biến chứng thần kinh",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây triệu chứng nhẹ",
+        "correct": false
+      },
+      {
+        "text": "Không có biến chứng gì",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến gan mà thôi",
         "correct": false
       }
     ]
