--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Công an TP.HCM ‘thần tốc’ phá án bắt cóc, giết người, ma túy",
+    "content": "Công an TP.HCM đã có những chiến công xuất sắc trong việc đấu tranh phòng chống tội phạm, đặc biệt là trong các vụ án bắt cóc, giết người và ma túy. Trong tháng 3 năm 2025, lực lượng cảnh sát đã triệt phá một băng nhóm bắt cóc người, giải cứu nạn nhân chỉ sau 12 giờ truy xét, và nhanh chóng bắt giữ nghi phạm trong vụ giết người chỉ sau 7 giờ. Đồng thời, Công an cũng đã triệt phá thành công hai đường dây ma túy lớn, bắt giữ 58 nghi can và thu giữ hơn 60 kg ma túy. Thành ủy và UBND TP.HCM đã ghi nhận và khen thưởng các chiến công này.",
+    "link": "https://tuoitre.vn/cong-an-tp-hcm-than-toc-pha-an-bat-coc-giet-nguoi-ma-tuy-20250312143058555.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Công an TP.HCM đã phá án nào trong tháng 3 năm 2025?",
+    "answers": [
+      {
+        "text": "Bắt cóc, giết người và ma túy",
+        "correct": true
+      },
+      {
+        "text": "Lừa đảo trực tuyến",
+        "correct": false
+      },
+      {
+        "text": "Buôn bán người",
+        "correct": false
+      },
+      {
+        "text": "Trộm cắp tài sản",
+        "correct": false
+      },
+      {
+        "text": "Mua bán trái phép vũ khí",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "VietABank bị phạt và truy thu thuế hơn 4 tỉ đồng",
     "content": "VietABank đã bị Tổng cục Thuế xử phạt và truy thu thuế tổng cộng gần 4,2 tỉ đồng do có vi phạm hành chính về thuế, bao gồm khai sai dẫn đến thiếu số thuế phải nộp. Trong đó, ngân hàng này bị phạt hơn 614 triệu đồng cho hành vi khai sai và hơn 35 triệu đồng cho các vi phạm khác. Cơ quan thuế yêu cầu VietABank nộp đủ số thuế còn thiếu vào ngân sách, đồng thời ghi nhận lãi sau thuế của ngân hàng này đạt 876 tỉ đồng trong năm 2024.",
     "link": "https://tuoitre.vn/vietabank-bi-phat-va-truy-thu-thue-hon-4-ti-dong-20250312141208832.htm",
@@ -1232,6 +1263,33 @@
     ]
   },
   {
+    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
+    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
+    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
+    "answers": [
+      {
+        "text": "Thay khớp gối phải",
+        "correct": true
+      },
+      {
+        "text": "Khám bệnh khác",
+        "correct": false
+      },
+      {
+        "text": "Tham quan du lịch",
+        "correct": false
+      },
+      {
+        "text": "Học tiếng Việt",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
     "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
     "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
@@ -1281,33 +1339,6 @@
       },
       {
         "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
-    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
-    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
-    "answers": [
-      {
-        "text": "Thay khớp gối phải",
-        "correct": true
-      },
-      {
-        "text": "Khám bệnh khác",
-        "correct": false
-      },
-      {
-        "text": "Tham quan du lịch",
-        "correct": false
-      },
-      {
-        "text": "Học tiếng Việt",
         "correct": false
       }
     ]
@@ -2194,6 +2225,37 @@
     ]
   },
   {
+    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
+    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
+    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
+    "answers": [
+      {
+        "text": "Bệnh sởi",
+        "correct": true
+      },
+      {
+        "text": "Ngộ độc thực phẩm",
+        "correct": false
+      },
+      {
+        "text": "Nhiễm trùng đường tiêu hóa",
+        "correct": false
+      },
+      {
+        "text": "Viêm phổi",
+        "correct": false
+      },
+      {
+        "text": "Sốt xuất huyết",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Biến chứng nguy hiểm của viêm gan E",
     "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
     "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
@@ -2243,37 +2305,6 @@
       },
       {
         "text": "Chỉ làm đau lưng mà thôi.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
-    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
-    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
-    "answers": [
-      {
-        "text": "Bệnh sởi",
-        "correct": true
-      },
-      {
-        "text": "Ngộ độc thực phẩm",
-        "correct": false
-      },
-      {
-        "text": "Nhiễm trùng đường tiêu hóa",
-        "correct": false
-      },
-      {
-        "text": "Viêm phổi",
-        "correct": false
-      },
-      {
-        "text": "Sốt xuất huyết",
         "correct": false
       }
     ]
@@ -2951,33 +2982,6 @@
     ]
   },
   {
-    "title": "Sun World và Vietravel hợp tác chiến lược",
-    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
-    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
-    "answers": [
-      {
-        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
-        "correct": true
-      },
-      {
-        "text": "Tăng giá vé vào cửa cho du khách.",
-        "correct": false
-      },
-      {
-        "text": "Giảm số lượng khách tham quan.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tổ chức tour du lịch trong nước.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
     "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
@@ -3004,6 +3008,37 @@
       },
       {
         "text": "8 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
+    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
+    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
+    "answers": [
+      {
+        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
+        "correct": true
+      },
+      {
+        "text": "Chỉ dành cho người lớn tuổi",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho trẻ em",
+        "correct": false
+      },
+      {
+        "text": "Không có hoạt động ngoài trời",
+        "correct": false
+      },
+      {
+        "text": "Cung cấp dịch vụ mua sắm cao cấp",
         "correct": false
       }
     ]
@@ -3040,32 +3075,28 @@
     ]
   },
   {
-    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
-    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
-    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
+    "title": "Sun World và Vietravel hợp tác chiến lược",
+    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
+    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
     "cat": "du-lich",
     "positivity": 9,
     "importance": 8,
-    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
+    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
     "answers": [
       {
-        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
+        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
         "correct": true
       },
       {
-        "text": "Chỉ dành cho người lớn tuổi",
+        "text": "Tăng giá vé vào cửa cho du khách.",
         "correct": false
       },
       {
-        "text": "Chỉ dành cho trẻ em",
+        "text": "Giảm số lượng khách tham quan.",
         "correct": false
       },
       {
-        "text": "Không có hoạt động ngoài trời",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp dịch vụ mua sắm cao cấp",
+        "text": "Chỉ tổ chức tour du lịch trong nước.",
         "correct": false
       }
     ]
@@ -3330,32 +3361,32 @@
     ]
   },
   {
-    "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
-    "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
-    "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
-    "cat": "gia-dinh",
-    "positivity": 10,
-    "importance": 8,
-    "question": "Chú rể Nhật Bản Takahashi YuYa đã làm gì đặc biệt trong đám cưới của mình?",
+    "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
+    "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
+    "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Kamax Cub-X sẽ ra mắt tại thị trường nào vào quý III năm 2025?",
     "answers": [
       {
-        "text": "Hát Quốc ca Việt Nam",
+        "text": "Malaysia",
         "correct": true
       },
       {
-        "text": "Đọc thơ bằng tiếng Nhật",
+        "text": "Việt Nam",
         "correct": false
       },
       {
-        "text": "Nhảy múa cùng cô dâu",
+        "text": "Thái Lan",
         "correct": false
       },
       {
-        "text": "Chơi nhạc cụ truyền thống",
+        "text": "Indonesia",
         "correct": false
       },
       {
-        "text": "Tổ chức tiệc lớn",
+        "text": "Philippines",
         "correct": false
       }
     ]
@@ -3388,32 +3419,32 @@
     ]
   },
   {
-    "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
-    "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
-    "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Kamax Cub-X sẽ ra mắt tại thị trường nào vào quý III năm 2025?",
+    "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
+    "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
+    "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
+    "cat": "gia-dinh",
+    "positivity": 10,
+    "importance": 8,
+    "question": "Chú rể Nhật Bản Takahashi YuYa đã làm gì đặc biệt trong đám cưới của mình?",
     "answers": [
       {
-        "text": "Malaysia",
+        "text": "Hát Quốc ca Việt Nam",
         "correct": true
       },
       {
-        "text": "Việt Nam",
+        "text": "Đọc thơ bằng tiếng Nhật",
         "correct": false
       },
       {
-        "text": "Thái Lan",
+        "text": "Nhảy múa cùng cô dâu",
         "correct": false
       },
       {
-        "text": "Indonesia",
+        "text": "Chơi nhạc cụ truyền thống",
         "correct": false
       },
       {
-        "text": "Philippines",
+        "text": "Tổ chức tiệc lớn",
         "correct": false
       }
     ]
